# pytorch_optimizer

./: .gitignore  .pylintrc  .testmondata  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  README.rst  SECURITY.md  hubconf.py  lint.py  mkdocs.yml  pyproject.toml  pytest.ini  qa.md  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/: CODEOWNERS  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  copy-readme.yml  copy_readme.yml  pr_automerge.yml  pr_codeql.yml  pr_labeler.yml  prepend_changelog.yml  publish.yml  python-package.yml  static_analysis.yml  update_docs.yml
docs/: .nav.yml  .readthedocs.yaml  api.rst  base.md  base_api.rst  conf.py  index.md  index.rst  loss.md  loss_api.rst  lr_scheduler.md  optimizer.md  optimizer_api.rst  qa.md  requirements.in  requirements.txt  scheduler_api.rst  util.md  util_api.rst  visualization.md
docs/changelogs/: v.2.10.0.md  v2.10.0.md  v2.10.1.md  v2.11.0.md  v2.11.1.md  v2.11.2.md  v2.12.0.md  v2.7.0.md  v2.8.0.md  v2.9.0.md  v2.9.1.md  v3.0.0.md  v3.0.1.md  v3.0.2.md  v3.1.0.md  v3.1.1.md  v3.1.2.md  v3.10.0.md  v3.2.0.md  v3.3.0.md  v3.3.1.md  v3.3.2.md  v3.3.3.md  v3.3.4.md  v3.3.5.md  v3.4.0.md  v3.4.1.md  v3.4.2.md  v3.4.3.md  v3.5.0.md  v3.5.1.md  v3.5.2.md  v3.6.0.md  v3.6.1.md  v3.6.2.md  v3.7.0.md  v3.7.1.md  v3.8.0.md  v3.8.1.md  v3.8.2.md  (+1 more)
docs/javascripts/: tables.js
examples/: benchmark_foreach.py  huggingface_trainer_example.py  pytorch_lightning_example.py  pytorch_lightning_manual_backward_example.py  visualize_optimizers.py
pytorch_optimizer/: __init__.py  adabelief.py  adabound.py  adahessian.py  adamp.py  adan.py  adapnm.py  agc.py  base_optimizer.py  chebyshev_schedule.py  diffgrad.py  diffrgrad.py  fp16.py  gc.py  lamb.py  lars.py  lookahead.py  madgrad.py  nero.py  optimizers.py  pcgrad.py  pnm.py  radam.py  ralamb.py  ranger.py  ranger21.py  sam.py  sgdp.py  shampoo.py  types.py  utils.py  version.py
pytorch_optimizer/base/: base_optimizer.py  exception.py  optimizer.py  scheduler.py  type.py  types.py
pytorch_optimizer/experimental/: deberta_v3_lr_scheduler.py
pytorch_optimizer/loss/: __init__.py  bi_tempered.py  cross_entropy.py  dice.py  f1.py  focal.py  jaccard.py  ldam.py  lovasz.py  tversky.py
pytorch_optimizer/lr_scheduler/: __init__.py  chebyshev.py  cosine_anealing.py  linear_warmup.py  proportion.py  rex.py  wsd.py
pytorch_optimizer/lr_scheduler/experimental/: deberta_v3_lr_scheduler.py
pytorch_optimizer/optimizer/: __init__.py  a2grad.py  adabelief.py  adabound.py  adadelta.py  adafactor.py  adagc.py  adahessian.py  adai.py  adalite.py  adam_mini.py  adamax.py  adamc.py  adamg.py  adamnorm.py  adamod.py  adamp.py  adams.py  adamw.py  adan.py  adanorm.py  adapnm.py  adashift.py  adasmooth.py  ademamix.py  adopt.py  agc.py  aggmo.py  aida.py  alig.py  amos.py  ano.py  apollo.py  avagrad.py  bcos.py  came.py  conda.py  dadapt.py  demo.py  diffgrad.py  (+69 more)
pytorch_optimizer/optimizer/experimental/: ranger25.py
scripts/: update_docs.py
tests/: conftest.py  constants.py  test_base.py  test_chebyshev_schedule.py  test_create_optimizer.py  test_foreach_utils.py  test_general_optimizer_parameters.py  test_gradients.py  test_load_loss_functions.py  test_load_lr_schedulers.py  test_load_modules.py  test_load_optimizers.py  test_loss_functions.py  test_lr_scheduler_parameters.py  test_lr_schedulers.py  test_optimizer_methods.py  test_optimizer_parameters.py  test_optimizer_variants.py  test_optimizers.py  test_sparse_gradient.py  test_utils.py  test_wrapper_optimizers.py  utils.py
